<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DepartmentActivity">

    <RadioGroup
        android:id="@+id/dept_radio_grp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/cs_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/computer_science_label" />

        <RadioButton
            android:id="@+id/sis_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/software_systems_label" />

        <RadioButton
            android:id="@+id/bi_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bio_info_label" />

        <RadioButton
            android:id="@+id/ds_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_science_label" />
    </RadioGroup>

    <Button
        android:id="@+id/cancel_dept_btn"
        android:layout_width="130dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/cancel_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/select_btn"
        android:layout_width="129dp"
        android:layout_height="47dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/select_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>